# synpact

./: .gitignore  Cargo.toml  README.md  eval.py
src/: align.rs  chain.rs  config.rs  fastq.rs  hash.rs  index.rs  lcp.rs  main.rs  map.rs  syncmer.rs
