[package]
name = "syncmer-hifi"
version = "0.1.0"
edition = "2021"
description = "Hierarchical locally-consistent syncmer mapper for PacBio HiFi reads"
license = "MIT"

[[bin]]
name = "syncmer-hifi"
path = "src/main.rs"

[dependencies]
flate2 = "1"
rayon  = "1"

[profile.release]
opt-level = 3
lto = true
